aruha/team-aruha#1740 ASPD data classification support: update validation to reject not supported `merchant_id ` for now. Adds unit tests.